Add changes on index.tsx and styles | Adding tailwind config files

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,10 @@
 {
   "bracketSameLine": false,
-  "arrowParens": "always",
+  "arrowParens": "avoid",
   "editorconfig": true,
   "singleAttributePerLine": true,
-  "semi": true
+  "semi": true,
+  "singleQuote": true,
+  "bracketSpacing": true,
+  "htmlWhitespaceSensitivity": "strict"
 }
