--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
-    "eslint": "8.31.0",
+    "eslint": "^8.0.1",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "react": "18.2.0",
@@ -23,7 +23,15 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^13.1.2",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
     "autoprefixer": "^10.4.13",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.32.1",
     "node-sass": "^8.0.0",
     "postcss": "^8.4.21",
     "sass": "^1.57.1",
