--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node-sass": "^8.0.0",
     "postcss": "^8.4.21",
     "sass": "^1.57.1",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "ts-node": "^10.9.1"
   }
 }
