--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "saasdesk-landing",
-  "version": "1.18.1",
+  "version": "0.0.0",
   "private": true,
+  "main": "dist/index.js",
+  "homepage": "https://github.com/senseijurado/05-saasdesk-next",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/senseijurado/05-saasdesk-next.git"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -34,5 +40,13 @@
     "sass": "^1.57.1",
     "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1"
-  }
+  },
+  "plugins": [
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/changelog",
+    "@semantic-release/github",
+    "@semantic-release/npm",
+    "@semantic-release/git"
+  ]
 }
