--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,10 @@
   "bracketSameLine": false,
   "arrowParens": "avoid",
   "singleAttributePerLine": true,
+  "singleQuote": true,
   "semi": true,
-  "singleQuote": true
+  "tabWidth": 2,
+  "useTabs": true,
+  "plugins": ["prettier-plugin-tailwindcss", "prettier-plugin-astro"],
+  "overrides": [{ "files": "**/*astro", "options": { "parser": "astro" } }]
 }
