feat: tsconfig + main.js on package.json

--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "scripts": {
     "dev": "next dev --port=4200",
-    "build": "rm -rf .next/ && rm -rf dist/ && next build",
-    "start": "next start"
+    "build": "rm -rf dist/ && tsc && yarn semantic && next build",
+    "start": "next start",
+    "semantic": "npx semantic-release"
   },
   "dependencies": {
     "@types/node": "18.11.18",
